basic-cfg: asterisk.conf: don't set languages
* No need to set language in a miniml configuration. 'en' will do just
  fine.
* It would be useful to have an example of setting it to a different
  language.
* Setting the documentation language explicitly is likewise not
  required. Setting it to a different value is not common. At least
  until there is a set of translated documentation.

Change-Id: I94d91ea34e129925f25af81ef8dc0906fb568cb7
Signed-off-by: Tzafrir Cohen <tzafrir.cohen@xorcom.com>

--- a/configs/basic-pbx/asterisk.conf
+++ b/configs/basic-pbx/asterisk.conf
@@ -22,5 +22,4 @@ astsbindir => /usr/sbin
 ;runuser = asterisk		; The user to run as.
 ;rungroup = asterisk		; The group to run as.
 
-defaultlanguage = en
-documentation_language = en_US
+;defaultlanguage = es
