func_odbc: single database connection should be optional
func_odbc was changed in Asterisk 13.9.0 (ASTERISK-25938)
to make func_odbc use a single database connection per DSN
because of reported bug with MySQL/MariaDB LAST_INSERT_ID().

This is drawback in performance when func_odbc is used
very often in dialplan.

Single database connection should be optional and disabled
by default.

Meanwhile... even with not persistent connection the stored
routine (procedure or function) can be used
to get correct LAST_INSERT_ID value.

ASTERISK-26010

Change-Id: I57d990616c957dabf7597dea5d5c3148f459dfb6

--- a/configs/samples/func_odbc.conf.sample
+++ b/configs/samples/func_odbc.conf.sample
@@ -1,6 +1,14 @@
 ;
 ; func_odbc.conf
 ;
+[general]
+; Asterisk uses separate connections for every database operation.
+; If single_db_connection is enabled then func_odbc will use a single
+; database connection per DSN.
+; This option is disabled by default.
+;single_db_connection=no
+;
+;
 ; Each context is a separately defined function.  By convention, all
 ; functions are entirely uppercase, so the defined contexts should also
 ; be all-uppercase, but there is nothing that enforces this.  All functions
