--- a/configure.ac
+++ b/configure.ac
@@ -1116,7 +1116,7 @@ AC_COMPILE_IFELSE(
 	[AC_LANG_PROGRAM([], [int x = 1;])],
 	AC_MSG_RESULT(yes)
 	[AST_LEAK_SANITIZER=1],
-	[AST_LEAK_SANITIZER=]
+	[AST_LEAK_SANITIZER=0]
 	AC_MSG_RESULT(no)
 )
 CFLAGS="${saved_sanitize_CFLAGS}"
@@ -1132,7 +1132,7 @@ AC_COMPILE_IFELSE(
 	[AC_LANG_PROGRAM([], [int x = 1;])],
 	AC_MSG_RESULT(yes)
 	[AST_UNDEFINED_SANITIZER=1],
-	[AST_UNDEFINED_SANITIZER=]
+	[AST_UNDEFINED_SANITIZER=0]
 	AC_MSG_RESULT(no)
 )
 CFLAGS="${saved_sanitize_CFLAGS}"
