--- a/res/res_hep.exports.in
+++ b/res/res_hep.exports.in
@@ -2,6 +2,7 @@
 	global:
 		LINKER_SYMBOL_PREFIX*hepv3_send_packet;
 		LINKER_SYMBOL_PREFIX*hepv3_create_capture_info;
+		LINKER_SYMBOL_PREFIX*hepv3_get_uuid_type;
 	local:
 		*;
 };
