--- a/configs/samples/pjsip.conf.sample
+++ b/configs/samples/pjsip.conf.sample
@@ -624,7 +624,7 @@
                         ; identified.
                         ; "username": Identify by the From or To username and domain
                         ; "auth_username": Identify by the Authorization username and realm
-                        : In all cases, if an exact match on username and domain/realm fails,
+                        ; In all cases, if an exact match on username and domain/realm fails,
                         ; the match will be retried with just the username.
                         ; (default: "username")
 ;redirect_method=user   ; How redirects received from an endpoint are handled
