--- a/makeopts.in
+++ b/makeopts.in
@@ -39,6 +39,7 @@ OPENSSL=@OPENSSL@
 LDCONFIG=@LDCONFIG@
 GIT=@GIT@
 ALEMBIC=@ALEMBIC@
+SYSTEMD_DIR=@SYSTEMD_DIR@
 
 BUILD_PLATFORM=@BUILD_PLATFORM@
 BUILD_CPU=@BUILD_CPU@
