BuildSystem: Avoid obsolete warnings on autoconf.
Some configure scripts used both AC_HELP_STRING and its replacement
AS_HELP_STRING. For consistency and to avoid obsolete warnings, all were changed
to AS_HELP_STRING. All configure scripts used AC_OUTPUT without parameter except
editline. For consistency and to avoid obsolete warnings, editline was changed
to use AC_OUTPUT without parameters. Removed the obsolete macros
AC_FUNC_SETVBUF_REVERSED and AC_TYPE_SIGNAL because Asterisk requires ANSI C
anyway. Replaced libcurl.m4 and pthread.m4 with upstream versions to avoid any
remaining warning on autoconf.

ASTERISK-26046 #close

Change-Id: I4512b40a1087a6cc2d90b461ccfd33a9ca4906e3

--- a/main/editline/configure.in
+++ b/main/editline/configure.in
@@ -1,7 +1,8 @@
 dnl 
 dnl Process this file with autoconf to produce a configure script.
 dnl 
-AC_INIT(Makefile.in)
+AC_INIT
+AC_CONFIG_SRCDIR([Makefile.in])
 
 dnl If CFLAGS isn't defined and using gcc, set CFLAGS to something reasonable.
 dnl Otherwise, just prevent autoconf from molesting CFLAGS.
@@ -274,5 +275,6 @@ AC_SUBST(TEST)
 AC_SUBST(TCSRCS)
 
 AC_CONFIG_HEADER(config.h)
-AC_OUTPUT([Makefile makelist])
+AC_CONFIG_FILES([Makefile makelist])
+AC_OUTPUT
 
