BuildSystem: Avoid obsolete warnings on autoconf.
Some configure scripts used both AC_HELP_STRING and its replacement
AS_HELP_STRING. For consistency and to avoid obsolete warnings, all were changed
to AS_HELP_STRING. All configure scripts used AC_OUTPUT without parameter except
editline. For consistency and to avoid obsolete warnings, editline was changed
to use AC_OUTPUT without parameters. Removed the obsolete macros
AC_FUNC_SETVBUF_REVERSED and AC_TYPE_SIGNAL because Asterisk requires ANSI C
anyway. Replaced libcurl.m4 and pthread.m4 with upstream versions to avoid any
remaining warning on autoconf.

ASTERISK-26046 #close

Change-Id: I4512b40a1087a6cc2d90b461ccfd33a9ca4906e3

--- a/configure.ac
+++ b/configure.ac
@@ -352,7 +352,7 @@ if test "${MD5}" = "digest" ; then
    MD5="${MD5} -a md5"
 fi
 
-ACX_PTHREAD
+AX_PTHREAD
 
 AC_LANG(C)
 
@@ -682,8 +682,6 @@ AC_PROG_GCC_TRADITIONAL
 AC_FUNC_MEMCMP
 AC_FUNC_MMAP
 AC_FUNC_SELECT_ARGTYPES
-AC_FUNC_SETVBUF_REVERSED
-AC_TYPE_SIGNAL
 AC_FUNC_STAT
 AC_FUNC_STRCOLL
 AC_FUNC_STRFTIME
@@ -1230,7 +1228,7 @@ AC_SUBST(AST_NATIVE_ARCH)
 
 dnl Check to see if rpath should be set in LDFLAGS
 AC_ARG_ENABLE(rpath,
-	[AC_HELP_STRING([--disable-rpath],
+	[AS_HELP_STRING([--disable-rpath],
 			[Disables rpath linker option checking])],
 	[case "${enableval}" in
 		y|ye|yes) check_rpath=yes ;;
