--- a/configure.ac
+++ b/configure.ac
@@ -2194,7 +2194,7 @@ if test "$USE_PJPROJECT" != "no" ; then
       LIBS="${saved_libs}"
       CPPFLAGS="${saved_cppflags}"
 
-      AST_EXT_LIB_CHECK([PJSIP_EVSUB_GRP_LOCK], [pjsip], [pjsip_evsub_add_lock], [pjsip.h], [$PJPROJECT_LIB], [$PJPROJECT_CFLAGS])
+      AST_EXT_LIB_CHECK([PJSIP_EVSUB_GRP_LOCK], [pjsip], [pjsip_evsub_add_ref], [pjsip.h], [$PJPROJECT_LIB], [$PJPROJECT_CFLAGS])
    fi
 fi
 
