--- a/Makefile.moddir_rules
+++ b/Makefile.moddir_rules
@@ -164,9 +164,10 @@ dist-clean::
 	$(AWK) -f $(ASTTOPDIR)/build_tools/get_moduleinfo $^ >> $@
 	echo "</member>" >> $@
 
-.moduleinfo:: $(addsuffix .moduleinfo,$(addprefix .,$(sort $(ALL_C_MODS) $(ALL_CC_MODS))))
+.moduleinfo:: $(addsuffix .moduleinfo,$(addprefix .,$(sort $(ALL_C_MODS) $(ALL_CC_MODS)))) | $(wildcard $(call tolower,$(MENUSELECT_CATEGORY)).xml)
 	@echo "<category name=\"MENUSELECT_$(MENUSELECT_CATEGORY)\" displayname=\"$(MENUSELECT_DESCRIPTION)\" remove_on_change=\"$(SUBDIR)/modules.link\">" > $@
 	@cat $^ >> $@
+	@if [ -f $(call tolower,$(MENUSELECT_CATEGORY)).xml ] ; then cat $(call tolower,$(MENUSELECT_CATEGORY)).xml >> $@ ; fi
 	@echo "</category>" >> $@
 
 moduleinfo: .moduleinfo
