--- a/Makefile.moddir_rules
+++ b/Makefile.moddir_rules
@@ -124,6 +124,18 @@ clean::
 install:: all
 	@echo "Installing modules from `basename $(CURDIR)`..."
 	@for x in $(LOADABLE_MODS:%=%.so); do $(INSTALL) -m 755 $$x "$(DESTDIR)$(ASTMODDIR)" ; done
+ifneq ($(XMLSTARLET),:)
+	@if [ -f .moduleinfo ] ; then \
+		declare -A DISABLED_MODS ;\
+		for x in $(MENUSELECT_$(MENUSELECT_CATEGORY)) ; do DISABLED_MODS[$${x}]=1 ; done ;\
+		EXTERNAL_MODS=$$(xmlstarlet sel -t -m "/category/member[support_level = 'external']" -v "@name" -n .moduleinfo) ;\
+		for x in $${EXTERNAL_MODS} ; do \
+			if [ -z "$${DISABLED_MODS[$${x}]}" ] ; then \
+				$(ASTTOPDIR)/build_tools/download_externals $${x} ;\
+			fi ;\
+		done ;\
+	fi
+endif
 
 uninstall::
 
